objects/Model_Category_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Category_Score__c</fullName>
        <label>Category Score</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Version</label>
        <referenceTo>Model_Version__c</referenceTo>
        <relationshipName>Master_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Guidance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score Guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Model Category Definition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Category Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>